--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
             <i class="fa-solid fa-arrow-up mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
             <p class="text-black font-bold">Rinterio</p>
         </div>
-        <div class="mr-4">
+        <div class="hidden lg:block">
+            <ul>
+                <li class="inline mx-1 text-black">Home</li>
+                <li class="inline mx-1">Service</li>
+                <li class="inline mx-1">Portfolio</li>
+                <li class="inline mx-1" >Blogs</li>
+                <li class="inline mx-1">Contact Us</li>
+            </ul>
+        </div>
+        <div class="px-4 hidden lg:block">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-cart-shopping mx-2"></i>
+            <button class="text-black font-bold py-2 px-8 bg-green-200 rounded-3xl">
+                Book Consult
+                <i class="fa-solid fa-arrow-up mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
+            </button>
+        </div>
+        <div class="mr-4 visible lg:hidden">
             <i class="fa-solid fa-bars"></i>
         </div>
      </nav>
@@ -54,7 +71,7 @@
                         modern.</p>
                 </div>
             </div>
-            <div class="flex mx-4 bg-white px-5 py-4 rounded-xl">
+            <div class="mt-3 flex mx-4 bg-white px-5 py-4 rounded-xl">
                 <div><img src="assets/residential.png" alt=""></div>
                 <div>
                     <h1 class="font-bold text-xl text-black">Residential</h1>
@@ -66,5 +83,130 @@
         </div>
         <div class="w-3/4 h-[250px] overflow-hidden mx-auto my-4"><img class="w-full" src="assets/Rectangle.png" alt=""></div>
      </section>
+     <section class="text-center bg-gray-100">
+        <button class="bg-white py-2 px-4 rounded-3xl">
+            <i class="fa-solid fa-arrow-up text-black rotate-90"></i>
+            How we works
+        </button>
+        <div class="my-4 px-2">
+            <h1 class="font-bold text-black text-3xl mb-3">Our Works Process</h1>
+            <p>The barn house captivates with its blend of rustic
+                charm and modern sophistication, featuring
+                weathered wood, sleek metal accents.</p>
+        </div>
+        <div class="text-left">
+            <div class="bg-red-400 mx-3 py-5 px-3 text-black rounded-xl my-4">
+                <img src="assets/concept.png" alt="">
+                <h1 class="font-bold text-xl text-black">Concept</h1>
+                <p>The barn house captivates with its
+                    blend of rustic charm and modern</p>
+            </div>
+            <div class="bg-yellow-400 mx-3 py-5 px-3 text-black rounded-xl my-4">
+                <img src="assets/flow-chart.png" alt="">
+                <h1 class="font-bold text-xl text-black">Design Process</h1>
+                <p>The barn house captivates with its
+                    blend of rustic charm and modern</p>
+            </div>
+            <div class="bg-green-400 mx-3 py-5 px-3 text-black rounded-xl my-4">
+                <img src="assets/vision.png" alt="">
+                <h1 class="font-bold text-xl text-black">Supervision</h1>
+                <p>The barn house captivates with its
+                    blend of rustic charm and modern</p>
+            </div>
+            <div class="bg-blue-400 mx-3 py-5 px-3 text-black rounded-xl my-4">
+                <img src="assets/budget-planning.png" alt="">
+                <h1 class="font-bold text-xl text-black">Budget Planning</h1>
+                <p>The barn house captivates with its
+                    blend of rustic charm and modern</p>
+            </div>
+        </div>
+     </section>
+
+     <section class="text-center my-5 bg-gray-100">
+        <button class="bg-green-300 py-2 px-4 rounded-3xl text-black">
+            <i class="fa-solid fa-arrow-up rotate-90"></i>
+            Explore Our Latest Portfolio
+        </button>
+        <div class="my-4 px-2">
+            <h1 class="font-bold text-black text-3xl mb-3">Our Latest Portfolio</h1>
+            <p>The barn house captivates with its blend of rustic
+                charm and modern sophistication, featuring
+                weathered wood, sleek metal accents.</p>
+        </div>
+        <div>
+            <div class="p-4 bg-white w-10/12 mx-auto rounded-xl my-4">
+                <img class="mx-auto" src="assets/img1.png" alt="">
+                <h1 class="font-bold text-black text-left my-3">Commercial</h1>
+                <p class="text-left">The barn house captivates with its
+                    blend of rustic charm and modern.
+                    The barn house captivates with its
+                    blend of rustic charm and modern .</p>
+                <button class="font-bold text-black">
+                    View Details
+                    <i class="fa-solid fa-arrow-up mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
+                </button>
+            </div>
+            <div class="w-10/12 p-4 bg-white mx-auto rounded-xl"><img class="mx-auto" src="assets/img2.png" alt=""></div>
+            <div class="my-4 w-10/12 p-4 bg-white mx-auto rounded-xl"><img class="mx-auto" src="assets/img3.png" alt=""></div>
+            <div class="p-4 bg-white w-10/12 mx-auto rounded-xl my-4">
+                <img class="mx-auto" src="assets/img4.png" alt="">
+                <h1 class="font-bold text-black text-left my-3">Commercial</h1>
+                <p class="text-left">The barn house captivates with its
+                    blend of rustic charm and modern.
+                    The barn house captivates with its
+                    blend of rustic charm and modern .</p>
+                <button class="font-bold text-black">
+                        View Details
+                    <i class="fa-solid fa-arrow-up mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
+                </button>
+            </div>
+            <div class="w-10/12 p-4 bg-white mx-auto rounded-xl"><img class="mx-auto" src="assets/img5.png" alt=""></div>
+            <div class="my-4 w-10/12 p-4 bg-white mx-auto rounded-xl"><img class="mx-auto" src="assets/img1.png" alt=""></div>
+        </div>
+     </section>
+
+     <section class="text-center my-6 bg-gray-100">
+        <button class="bg-green-300 py-2 px-4 rounded-3xl text-black">
+            <i class="fa-solid fa-arrow-up rotate-90"></i>
+            Let s Connect
+        </button>
+        <div class="my-4 px-2">
+            <h1 class="font-bold text-black text-3xl mb-3">Let s Discuss Next Project</h1>
+            <p>The barn house captivates with its blend of rustic
+                charm and modern sophistication, featuring
+                weathered wood, sleek metal accents.</p>
+        </div>
+        <div>
+            <input class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl" type="text" placeholder="First Name*">
+            <input class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl"  type="text" placeholder="Last Name*">
+            <input class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl" type="text" placeholder="Phone Number*">
+            <input class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl" type="text" placeholder="Email Address">
+            <textarea class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl h-[200px]" name="" id="" placeholder="Write your message here"></textarea>
+        <button class="font-bold text-black bg-green-300 py-3 px-5 rounded-xl">
+                Send Mail
+            <i class="fa-solid fa-arrow-up mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
+        </button>
+        </div>
+     </section>
+     <footer class="w-full text-center bg-black p-3">
+        <div class="w-3/4 flex mx-auto justify-center my-3">
+            <i class="fa-solid fa-arrow-up  mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
+            <p class="font-bold">Rinterio</p>
+        </div>
+        <p class="mb-2">The barn house captivates with its blend of rustic
+            charm and modern sophistication, featuring
+            weathered wood, sleek metal accents.</p>
+        <div>
+            <a class="block my-2 text-white text-bold" href="">Home</a>
+            <a class="block my-2 text-white text-bold"  href="">Service</a>
+            <a class="block my-2 text-white text-bold"  href="">Portfolio</a>
+            <a class="block my-2 text-white text-bold"  href="">Blogs</a>
+            <a class="block my-2 text-white text-bold"  href="">Contact Us</a>
+        </div>
+        <button class="font-bold my-4 text-black bg-green-300 py-3 px-8 rounded-xl">
+            Book Consult
+        <i class="fa-solid fa-arrow-up mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
+    </button>
+     </footer>
 </body>
 </html>
