--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
      </nav>
      <section class="my-5">
-        <div class="p-8"><img src="assets/banner.png" alt=""></div>
+        <div class="p-8"><img class="mx-auto" src="assets/banner.png" alt=""></div>
         <div class="text-center">
             <h1 class="font-bold text-black text-4xl">A barn house of this design has a striking appearance</h1>
             <p class="my-3">The barn house captivates with its blend of rustic
@@ -49,7 +49,8 @@
             </button>
         </div>
      </section>
-     <section class="text-center my-5 bg-gray-100 py-5">
+     <section class="text-center my-5 bg-gray-100 py-5 lg:flex lg:items-center">
+        <div class=" lg:w-2/4">
         <button class="bg-white py-2 px-4 rounded-3xl">
             <i class="fa-solid fa-arrow-up text-black rotate-90"></i>
             About Us
@@ -81,7 +82,8 @@
                 </div>
             </div>
         </div>
-        <div class="w-3/4 h-[250px] overflow-hidden mx-auto my-4"><img class="w-full" src="assets/Rectangle.png" alt=""></div>
+      </div>
+        <div class="w-3/4 h-[250px] lg:h-auto lg:w-2/5 overflow-hidden mx-auto my-4"><img class="w-full" src="assets/Rectangle.png" alt=""></div>
      </section>
      <section class="text-center bg-gray-100">
         <button class="bg-white py-2 px-4 rounded-3xl">
@@ -94,26 +96,26 @@
                 charm and modern sophistication, featuring
                 weathered wood, sleek metal accents.</p>
         </div>
-        <div class="text-left">
-            <div class="bg-red-400 mx-3 py-5 px-3 text-black rounded-xl my-4">
+        <div class="text-left lg:flex">
+            <div class="bg-red-400 mx-3 py-5 lg:py-8 lg:px-6 px-3 text-black rounded-xl my-4">
                 <img src="assets/concept.png" alt="">
                 <h1 class="font-bold text-xl text-black">Concept</h1>
                 <p>The barn house captivates with its
                     blend of rustic charm and modern</p>
             </div>
-            <div class="bg-yellow-400 mx-3 py-5 px-3 text-black rounded-xl my-4">
+            <div class="bg-yellow-400 mx-3 py-5 lg:py-8 lg:px-6 px-3 text-black rounded-xl my-4">
                 <img src="assets/flow-chart.png" alt="">
                 <h1 class="font-bold text-xl text-black">Design Process</h1>
                 <p>The barn house captivates with its
                     blend of rustic charm and modern</p>
             </div>
-            <div class="bg-green-400 mx-3 py-5 px-3 text-black rounded-xl my-4">
+            <div class="bg-green-400 mx-3 py-5 lg:py-8 lg:px-6 px-3 text-black rounded-xl my-4">
                 <img src="assets/vision.png" alt="">
                 <h1 class="font-bold text-xl text-black">Supervision</h1>
                 <p>The barn house captivates with its
                     blend of rustic charm and modern</p>
             </div>
-            <div class="bg-blue-400 mx-3 py-5 px-3 text-black rounded-xl my-4">
+            <div class="bg-blue-400 mx-3 py-5 lg:py-8 lg:px-6 px-3 text-black rounded-xl my-4">
                 <img src="assets/budget-planning.png" alt="">
                 <h1 class="font-bold text-xl text-black">Budget Planning</h1>
                 <p>The barn house captivates with its
@@ -133,9 +135,12 @@
                 charm and modern sophistication, featuring
                 weathered wood, sleek metal accents.</p>
         </div>
-        <div>
-            <div class="p-4 bg-white w-10/12 mx-auto rounded-xl my-4">
-                <img class="mx-auto" src="assets/img1.png" alt="">
+        <div class="grid grid-cols-1 lg:grid-cols-5">
+            <div class="p-4 lg:flex bg-white sm:w-10/12 mx-auto rounded-xl my-4 lg:col-span-3">
+                <div>
+                <img class="mx-auto lg:pr-4 lg:w-[500px]" src="assets/img1.png" alt="">
+               </div>
+               <div>
                 <h1 class="font-bold text-black text-left my-3">Commercial</h1>
                 <p class="text-left">The barn house captivates with its
                     blend of rustic charm and modern.
@@ -145,11 +150,15 @@
                     View Details
                     <i class="fa-solid fa-arrow-up mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
                 </button>
+               </div>
             </div>
-            <div class="w-10/12 p-4 bg-white mx-auto rounded-xl"><img class="mx-auto" src="assets/img2.png" alt=""></div>
+            <div class="w-10/12 p-4 bg-white mx-auto rounded-xl lg:col-span-2"><img class="mx-auto" src="assets/img2.png" alt=""></div>
             <div class="my-4 w-10/12 p-4 bg-white mx-auto rounded-xl"><img class="mx-auto" src="assets/img3.png" alt=""></div>
-            <div class="p-4 bg-white w-10/12 mx-auto rounded-xl my-4">
-                <img class="mx-auto" src="assets/img4.png" alt="">
+            <div class="p-4 lg:col-span-3 lg:flex bg-white w-10/12 mx-auto rounded-xl my-4">
+                <div>
+                <img class="mx-auto lg:pr-4 lg:w-[500px]" src="assets/img4.png" alt="">
+               </div>
+               <div>
                 <h1 class="font-bold text-black text-left my-3">Commercial</h1>
                 <p class="text-left">The barn house captivates with its
                     blend of rustic charm and modern.
@@ -160,8 +169,8 @@
                     <i class="fa-solid fa-arrow-up mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
                 </button>
             </div>
+            </div>
             <div class="w-10/12 p-4 bg-white mx-auto rounded-xl"><img class="mx-auto" src="assets/img5.png" alt=""></div>
-            <div class="my-4 w-10/12 p-4 bg-white mx-auto rounded-xl"><img class="mx-auto" src="assets/img1.png" alt=""></div>
         </div>
      </section>
 
@@ -177,11 +186,13 @@
                 weathered wood, sleek metal accents.</p>
         </div>
         <div>
+        <div class="grid lg:grid-cols-2 justify-center">
             <input class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl" type="text" placeholder="First Name*">
             <input class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl"  type="text" placeholder="Last Name*">
             <input class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl" type="text" placeholder="Phone Number*">
             <input class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl" type="text" placeholder="Email Address">
-            <textarea class="bg-white my-3 py-4 px-5 w-10/12 rounded-2xl h-[200px]" name="" id="" placeholder="Write your message here"></textarea>
+            <textarea class="bg-white mx-9 lg:col-span-2 py-4 px-5 w-10/12 rounded-2xl h-[200px]" name="" id="" placeholder="Write your message here"></textarea>
+        </div>
         <button class="font-bold text-black bg-green-300 py-3 px-5 rounded-xl">
                 Send Mail
             <i class="fa-solid fa-arrow-up mr-1 mt-1 bg-green-400 px-2 py-1 rounded-full text-black rotate-45"></i>
@@ -197,11 +208,11 @@
             charm and modern sophistication, featuring
             weathered wood, sleek metal accents.</p>
         <div>
-            <a class="block my-2 text-white text-bold" href="">Home</a>
-            <a class="block my-2 text-white text-bold"  href="">Service</a>
-            <a class="block my-2 text-white text-bold"  href="">Portfolio</a>
-            <a class="block my-2 text-white text-bold"  href="">Blogs</a>
-            <a class="block my-2 text-white text-bold"  href="">Contact Us</a>
+            <a class="block lg:inline lg:mx-2 my-2 text-white text-bold" href="">Home</a>
+            <a class="block lg:inline lg:mx-2 my-2 text-white text-bold"  href="">Service</a>
+            <a class="block lg:inline lg:mx-2 my-2 text-white text-bold"  href="">Portfolio</a>
+            <a class="block lg:inline lg:mx-2 my-2 text-white text-bold"  href="">Blogs</a>
+            <a class="block lg:inline lg:mx-2 my-2 text-white text-bold"  href="">Contact Us</a>
         </div>
         <button class="font-bold my-4 text-black bg-green-300 py-3 px-8 rounded-xl">
             Book Consult
